--- a/Billing-Software/src/main/resources/application.properties
+++ b/Billing-Software/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ===============================
-# Server Config
+# Server Configuration
 # ===============================
 server.port=${PORT:8080}
 server.servlet.context-path=/api/v1.0
@@ -7,9 +7,9 @@ server.servlet.context-path=/api/v1.0
 # ===============================
 # MySQL Database (Railway)
 # ===============================
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql.railway.internal}:${DB_PORT:3306}/${DB_NAME:railway}
+spring.datasource.url=jdbc:mysql://switchback.proxy.rlwy.net:16464/railway
 spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:KJRnQFsvekHkeKpiKuwdzzBKkIJEaJee}
+spring.datasource.password=${DB_PASSWORD:TvDEJETZZfQJYgEzhEwJKDsLXfJYoHck}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ===============================
-# AWS (Optional)
+# AWS Configuration (Optional)
 # ===============================
 aws.access.key=${AWS_ACCESS_KEY:your_access_key}
 aws.secret.key=${AWS_SECRET_KEY:your_secret_key}
@@ -28,12 +28,12 @@ aws.region=ap-south-1
 aws.bucket.name=${AWS_BUCKET_NAME:your_bucket_name}
 
 # ===============================
-# JWT Secret
+# JWT Configuration
 # ===============================
 jwt.secret.key=${JWT_SECRET_KEY:thisismysecretkeyfortheupcomingproject}
 
 # ===============================
-# Razorpay Keys
+# Razorpay Configuration
 # ===============================
 razorpay.key.id=${RAZORPAY_KEY_ID:rzp_test_1yXE9lGhByFTqj}
 razorpay.key.secret=${RAZORPAY_KEY_SECRET:ey6YWk9Hr8yrgsh0ZVHDoX7E}
